[package]
name = "todo-local"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
serde_json = "1.0.113"
serde = {version = "1.0.196", features = ["derive"]}
rand = "0.8.5"
once_cell = "1.19.0"